manifests/mqtt-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tendril-mqtt-worker
  namespace: tendril
spec:
  selector:
    app: tendril-mqtt-worker
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: webhook
  type: ClusterIP
