manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tendril-redis
  namespace: tendril
  labels:
    app: tendril-redis
spec:
  selector:
    app: tendril-redis
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: None
