manifests/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tendril-scheduler
  namespace: tendril
  labels:
    app: tendril-scheduler
spec:
  selector:
    app: tendril-scheduler
  ports:
  - port: 8080
    targetPort: 8080
    name: health
  clusterIP: None
