manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tendril-web
  namespace: tendril
spec:
  selector:
    app: tendril-web
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
